--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "image-upload",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "ts-node server/index.ts"
+    "build": "npx tsc",
+    "start": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.5",
+    "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
