--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
@@ -15,6 +14,7 @@
   "dependencies": {
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
+    "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
